--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 5500;
+
+MONGODB_URI = mongodb+srv://admina:admina000@carminder.6qpcfne.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
